[package]
name = "bevy-tutti"
version = "0.1.0"
edition = "2021"
description = "Bevy plugin for Tutti - Minimal Bevy integration for real-time audio"
license = "MIT OR Apache-2.0"

[dependencies]
# Minimal Bevy (just ECS + App, no rendering)
bevy_app = { version = "0.17", default-features = false }
bevy_ecs = { version = "0.17", default-features = false }
bevy_log = { version = "0.17", default-features = false }
bevy_asset = { version = "0.17", default-features = false }
bevy_reflect = { version = "0.17", default-features = false }
bevy_transform = { version = "0.17", optional = true }

# Tutti audio engine
tutti = { path = "../tutti" }

# Error handling
thiserror = "2"

# MIDI UI observer channel
crossbeam-channel = "0.5"

[features]
default = []

# Full feature set
full = ["tutti/full", "spatial"]

# Spatial audio (requires Transform for position sync)
spatial = ["tutti/dsp", "bevy_transform"]

# Audio formats (aligned with tutti)
wav = ["tutti/wav"]
flac = ["tutti/flac"]
mp3 = ["tutti/mp3"]
ogg = ["tutti/ogg"]
files = ["tutti/files"]

# MIDI (aligned with tutti)
midi = ["tutti/midi"]
midi-hardware = ["midi", "tutti/midi-hardware"]
mpe = ["midi", "tutti/mpe"]
midi2 = ["midi", "tutti/midi2"]

# Synth & sampling
synth = ["tutti/synth"]
soundfont = ["tutti/soundfont"]
sampler = ["tutti/sampler"]

# DSP
dsp = ["tutti/dsp"]

# Plugin hosting
plugin = ["tutti/plugin"]
vst2 = ["tutti/vst2"]
vst3 = ["tutti/vst3"]
clap = ["tutti/clap"]

# Neural & ML
neural = ["tutti/neural"]
burn = ["neural", "tutti/burn"]

# Export & analysis
export = ["tutti/export"]
analysis = ["tutti/analysis"]

# Automation
automation = ["tutti/automation"]
